@@ -1,5 +1,11 @@
 Changes with Apache 1.3.20
 
+  *) Solved a very serious threading problem with WinNT/2K Services.  The
+     moment master_main told that the shutdown was complete, the parent
+     control thread exited Apache, leaving mod_jserv's Java process running
+     and alternately invoking mod_perl's cleanups from the correct thread
+     or the service control thread. [William Rowe]
+
   *) Populate the Win32 HKLM\System\CurrentControlSet\Services\[apachesvc]
      key with the Description value of the running server across all Win32
      platforms, including NT, ME and 9x.  This value is the server_version
